--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,8 @@ code {
 #root {
   display: flex;
   background: var(--primary05);
-  justify-content: center;
+  justify-content: flex-start;
   flex-direction: column;
   align-items: center;
+  min-height: 100vh;
 }
