--- a/src/CreateTodoButton/CreateTodoButton.css
+++ b/src/CreateTodoButton/CreateTodoButton.css
@@ -3,7 +3,7 @@
   align-self: flex-end;
   border-radius: 50%;
   margin-bottom: 10px;
-  margin-right: 10px;
+  margin-right: 10vw;
   padding: 15px;
   font-size: 24px;
   color: var(--highlighted);
