--- a/src/CreateTodoButton/CreateTodoButton.css
+++ b/src/CreateTodoButton/CreateTodoButton.css
@@ -10,6 +10,7 @@
   background: rgba(255, 255, 255, 0.1);
   transform: rotate(0deg);
   cursor: pointer;
+  z-index: 10;
 }
 
 .CreateTodoButton:hover {
