--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   color: #fff;
   padding: 10px;
 }
