--- a/src/Modal/Modal.css
+++ b/src/Modal/Modal.css
@@ -1,11 +1,12 @@
 .ModalBackground {
-  width: 100%;
-  height: 100vh;
+  width: 96%;
+  height: 96vh;
   background: var(--background05);
   position: absolute;
-  left: 0;
-  top: 0;
+  left: 2%;
+  top: 2vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
