--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@
   font-family: 'Montserrat', sans-serif;
 }
 
+html {
+  font-size: 67.5%;
+}
+
 body {
   margin: 0;
   background:  var(--background) url(https://i.ibb.co/h1BxFKG/bg1-reduced.jpg);
@@ -24,6 +28,7 @@ body {
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif; */
+  font-size: 1.8rem;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
