--- a/src/TodoCounter/TodoCounter.css
+++ b/src/TodoCounter/TodoCounter.css
@@ -2,7 +2,7 @@
   font-size: 24px;
   text-align: center;
   margin: 0;
-  padding: 48px 20px;
+  padding: 48px 20px 20px;
 }
 
 .TodoCounter span {
