--- a/src/TodoItem/TodoItem.css
+++ b/src/TodoItem/TodoItem.css
@@ -1,4 +1,5 @@
 .TodoItem {
+  min-height: 35px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -10,6 +11,7 @@
   border-bottom: 2px solid var(--background);
   border-right: 2px solid var(--background);
   border-radius: 10px;
+  transition: 400ms;
 }
 
 .TodoItem:hover {
@@ -38,9 +40,12 @@
 
 .Icon {
   position: relative;
-  padding: 10px;
+  padding-right: 10px;
+  padding-left: 10px;
   cursor: pointer;
   color: white;
+  transform: scale(1);
+  transition: transform 400ms;
 }
 
 .Icon.Icon-check {
@@ -65,6 +70,5 @@
 
 .Icon.Icon-delete:hover {
   color: red;
-  padding: 5px;
-  font-size: 24px;
+  transform: scale(1.5);
 }
