--- a/src/TodoList/TodoList.css
+++ b/src/TodoList/TodoList.css
@@ -1,13 +1,39 @@
 .TodoList {
   position: relative;
+  max-height: 450px;
   margin: 15px 0;
   padding: 5px 5px;
   background: var(--background05);
   border-radius: 10px;
+  overflow-y: scroll;
 }
 
 .TodoList-ul {
   display: flex;
   flex-direction: column;
   width: 280px;
+}
+
+/* * ============================== */
+/* * ========== WEBKIT ============ */
+/* * ============================== */
+
+::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 25px;
+}
+
+::-webkit-scrollbar {
+	width: 10px;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 25px;
+}
+
+::-webkit-scrollbar:hover {
+	background: rgba(255, 255, 255, 0.2);
+  box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.2);
+}
+
+::-webkit-scrollbar:hover:active {
+  background: rgba(255, 255, 255, 0.25);
 }
