--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ body {
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  border-bottom: inset 0 0 555px var(--background);
+  /* border-bottom: inset 0 0 555px var(--background); */
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif; */
